# TinyLA

./: CMakeLists.txt  README.md  test_cross_standalone.cpp  test_rotation_derivative.cpp
.cache/clangd/index/: TinyLA.h.53C7A9552454490C.idx  examples.cpp.8027FA82EA71F519.idx  test_main.cpp.594E0994C2D9DF84.idx
docs/: reference.typ
examples/: CMakeLists.txt  examples.cpp  examples2.cpp
include/: TinyLA.h  TinyLA_DEPRECATED_.h  TinyLA_ET.h
tests/: test_cross_product_derivative.cpp  test_main.cpp
